force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <label>本</label>
    <nameField>
        <label>本名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>