force-app/main/default/objects/Book__c/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <label>画像URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>