force-app/main/default/objects/Book__c/fields/writer__c.field-meta.xml
<CustomField>
    <fullName>writer__c</fullName>
    <label>作家</label>
    <length>255</length>
    <type>Text</type>
</CustomField>